{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "b39aaebe-fe6c-4187-8e8b-12fa044d5fbd",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f36b709a-8c23-4bc0-b5c4-674a3fa938d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkLeft",
                    "type": "Button",
                    "id": "e17aa0dc-a78a-4451-8e6c-9cd4a9e75448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "WalkRight",
                    "type": "Button",
                    "id": "8804bfb7-1b94-4c40-abe5-d72902b0b583",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ClimbingUp",
                    "type": "Button",
                    "id": "425a6252-0ff7-4d26-b613-9e300e3c78a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ClimbingDown",
                    "type": "Button",
                    "id": "8016ec61-fb30-4cb4-a8bf-8105464ce545",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c300edd-c087-4395-bdea-9061b0f9986b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8814001a-2994-4282-9d16-c1b7cf2c0d06",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4f7ee52-7437-4635-bed7-08172dcdb587",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WalkRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "452154f5-943c-456c-b6fd-b3c800d7f700",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClimbingUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59dbc92c-71ad-47ca-847a-a9a96441d4b9",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClimbingDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Volium",
            "id": "e10eefc2-f6d8-484c-ac89-fb22bcc63cc9",
            "actions": [
                {
                    "name": "VoliumUp",
                    "type": "Button",
                    "id": "8e0be390-cd2d-4177-aeb8-a047997f3609",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VoliumDown",
                    "type": "Button",
                    "id": "cc04ee32-bef6-4cee-bcbf-e54ca09eef77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mute",
                    "type": "Button",
                    "id": "c398d9a5-1124-4ed7-a23b-5b1c4b84c3e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cf52d91c-4c34-415c-a6c5-9a922e797ca1",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VoliumUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ed883a1-2bf5-4d37-9d25-74be8946934b",
                    "path": "<Keyboard>/minus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VoliumDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8dea7ed-a80d-4089-875a-bc6e8b8ae49a",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mute",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}